@@ -2,7 +2,7 @@ dnl Process this file with autoconf to produce a configure script.
 
 AC_INIT(gtk-doc.dsl.in)
 
-AM_INIT_AUTOMAKE(gtk-doc, 0.2)
+AM_INIT_AUTOMAKE(gtk-doc, 0.3)
 
 AC_ARG_WITH(dsssl-dir, [  --with-dsssl-dir=PATH path to DocBook style sheets ])
 
